# shdfsdjahdjkahjdasjk

./: .gitignore  2app.py  LICENSE  README.md  all_files.py  all_in_one.py  app.py  dag.html  info.md  main.py  pyproject.toml  test.py
scripts/: algorithm_comparison.py  print_topo.py
src/rcpsp_marketing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rcpsp_marketing/algorithms/: __init__.py
src/rcpsp_marketing/algorithms/local_search/: __init__.py  hill_climb.py  randomized_local_search.py  simulated_annealing.py
src/rcpsp_marketing/cli/: generate_instances.py  main_demo.py  run_compare.py  run_sa_batch.py
src/rcpsp_marketing/config/: __init__.py  defaults.py
src/rcpsp_marketing/core/: __init__.py  improvement.py  objective.py  precedence.py  scheduling.py  scheduling_incremental.py  scheduling_parallel_incremental.py
src/rcpsp_marketing/data/: __init__.py  models.py
src/rcpsp_marketing/experiments/: __init__.py  bench_incremental_serial_sgs.py  common.py  compare_end2end_ref_vs_fast.py  compare_objective_ref_vs_fast.py  compare_sa_rls.py  decode_incremental_compare_psgs.py  decoder_compare.py  decoder_visualize.py  sa_batch.py
src/rcpsp_marketing/io/: __init__.py  psplib_base.py  psplib_extended.py  schedule_export.py
src/rcpsp_marketing/viz/: __init__.py  dag.py  packing.py  schedule.py  search_history.py
